--- a/.github/workflows/storage-create.yml
+++ b/.github/workflows/storage-create.yml
@@ -26,14 +26,12 @@ jobs:
         uses: actions/checkout@v3
       - name: Configure GCP credentials
         id: auth
-        uses: google-github-actions/auth@v1 
+        uses: google-github-actions/auth@v2
         with:
+          project_id: 'poc-test-424208'
           # Value from command: gcloud iam workload-identity-pools providers describe github-actions --workload-identity-pool="github-actions-pool" --location="global"
           workload_identity_provider: "projects/719424280961/locations/global/workloadIdentityPools/github-pool/providers/github-pool-provider"
-          create_credentials_file: true
           service_account: "testing1@poc-test-424208.iam.gserviceaccount.com"
-          token_format: "access_token"
-          access_token_lifetime: "120s"
       - name: Echo Everything
         run: printenv
       - name: Setup Terraform with specified version on the runner
