getting cred token

--- a/.github/workflows/storage-create.yml
+++ b/.github/workflows/storage-create.yml
@@ -36,6 +36,8 @@ jobs:
         run: printenv
       - name: Setup Terraform with specified version on the runner
         uses: hashicorp/setup-terraform@v2
+        with:
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
         # with:
         #   terraform_version: 1.4.6
       - name: Terraform format
