--- a/.github/workflows/storage-create.yml
+++ b/.github/workflows/storage-create.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Configure GCP credentials
         id: auth
-        uses: google-github-actions/auth@v2
+        uses: google-github-actions/auth@v2.0.0
         with:
           project_id: 'poc-test-424208'
           # Value from command: gcloud iam workload-identity-pools providers describe github-actions --workload-identity-pool="github-actions-pool" --location="global"
@@ -34,15 +34,12 @@ jobs:
           service_account: "testing1@poc-test-424208.iam.gserviceaccount.com"
       - name: Echo Everything
         run: printenv
-      - name: Setup Terraform with specified version on the runner
-        uses: hashicorp/setup-terraform@v2
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
         with:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
         # with:
         #   terraform_version: 1.4.6
-      - name: Terraform format
-        id: fmt
-        run: terraform fmt
       - name: Terraform init
         id: init
         run: terraform init
