--- a/.github/workflows/storage-create.yml
+++ b/.github/workflows/storage-create.yml
@@ -34,6 +34,12 @@ jobs:
           service_account: "testing-2@poc-test-424208.iam.gserviceaccount.com"
       - name: Echo Everything
         run: printenv
+      - name: Setup GCloud SDK
+        uses: "google-github-actions/setup-gcloud@v0"
+        with:
+          version: ">= 363.0.0"
+      - name: Authenticate to Google Cloud
+        run: gcloud auth print-access-token
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
