--- a/.github/workflows/storage-create.yml
+++ b/.github/workflows/storage-create.yml
@@ -34,18 +34,18 @@ jobs:
           service_account: "testing1@poc-test-424208.iam.gserviceaccount.com"
       - name: Echo Everything
         run: printenv
-      - name: Setup GCloud SDK
-        uses: "google-github-actions/setup-gcloud@v1"
-        with:
-          version: ">= 363.0.0"
-      - name: auth list
-        run: gcloud auth list
-      - name: Authenticate to Google Cloud
-        run: gcloud auth print-access-token
+      # - name: Setup GCloud SDK
+      #   uses: "google-github-actions/setup-gcloud@v1"
+      #   with:
+      #     version: ">= 363.0.0"
+      # - name: auth list
+      #   run: gcloud auth list
+      # - name: Authenticate to Google Cloud
+      #   run: gcloud auth print-access-token
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
-        with:
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+        # with:
+        #   cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
         # with:
         #   terraform_version: 1.4.6
       - name: Terraform init
